[metadata]
name = binancetrading
version = 0.0.1
author = Fernando Garcia
description = Custom trading module using binance API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fegarciad/BinanceTrading
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    pandas
    matplotlib
    binance-connector
    